tests/e2e/pass/m61_slice_bounds.ep
# EXIT: 1
# STDOUT: Epic runtime error: slice out of bounds
fun main(): void {
    let values = new i64[2]
    let invalid = values[1:3]
    print(itoa(len(invalid)))
}
